--- a/foundry.toml
+++ b/foundry.toml
@@ -11,6 +11,10 @@ via-ir = false
 runs = 200
 
 [rpc_endpoints]
-mainnet = "https://rpc.ankr.com/eth"
+mainnet = "${MAINNET_RPC_URL}"
+goerli = "${GOERLI_RPC_URL}"
+
+[etherscan]
+goerli = { key = "${ETHERSCAN_API_KEY}" }
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
