--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
   check:
     runs-on: ubuntu-latest
     env: 
-      POLYGON_RPC_URL: ${{ secrets.POLYGON_RPC_URL }}
+      MAINNET_RPC_URL: ${{ secrets.MAINNET_RPC_URL }}
 
     steps:
       - uses: actions/checkout@v4
@@ -44,5 +44,5 @@ jobs:
 
       - name: Run Forge tests
         run: |
-          forge test -vvv
+          forge test -vvvvv
         id: test
