--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "lib/unhosted-modules"]
+	path = lib/unhosted-modules
+	url = https://github.com/Unhosted-Wallet/unhosted-modules
